@@ -1,5 +1,14 @@
 2008-04-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* classic/logplayer.cpp:
+	* classic/logplayer.h:
+	* classic/nowindow.cpp:
+	* qt4/main_data.cpp:
+	* rcsslogplayer/rcsslogplayer.pro:
+	* tool/Makefile.am:
+	- fixed compliser warning.
+	- added profiling code.
+
 	* classic/Makefile.am:
 	* icons/rcss.ico:
 	* rcsslogplayer.pro:
